--- a/index.html
+++ b/index.html
@@ -10,13 +10,77 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="./style.css"/>
 
   <title>Refund</title>
 </head>
 
 <body>
+  <main>
+    <img src="./img/logo.svg" alt="Refund logo" class="logo">
 
+    <section>
+      <form>
+        <h1>Solicitação de reembolso</h1>
+        <p>
+          Informe os dados da despesa para solicitar reembolso.
+          A despesa será analisada e reembolsada em até 30 dias.
+        </p>
+
+        <fieldset>
+          <legend>Nome da despesa</legend>
+          <input type="text" id="expense" name="expense" required>
+        </fieldset>
+
+        <div class="inputs-row">
+          <fieldset>
+            <legend>Categoria</legend>
+            <select name="category" id="category" required>
+              <option value="" disabled selected hidden>Selecione</option>
+              <option value="food">Alimentação</option>
+              <option value="accomodation">Hospedagem</option>
+              <option value="services">Serviços</option>
+              <option value="transport">Transporte</option>
+              <option value="others">outros</option>
+            </select>
+          </fieldset>
+
+          <fieldset>
+            <legend>Valor da despesa</legend>
+            <input type="text" name="amount" id="amount" placeholder="R$0,00" required>
+          </fieldset>
+        </div>
+        <button type="submit">Adicionar despesa</button>
+      </form>
+      <aside>
+        <header>
+          <p>
+            Minhas solicitações <i>&bullet;</i>
+            <span>0 despesa</span>
+          </p>
+          <h2>
+            <small>R$</small>0,00
+          </h2>
+        </header>
+
+        <ul>
+          <li class="expense">
+            <img src="./img/food.svg" alt="Icone de tipo da despesa">
+
+            <div>
+              <strong>Almoço</strong>
+              <span>Alimentação</span>
+            </div>
+
+            <span class="expense-amount"></span>
+              <small>R$</small>1.420,57
+
+              <img src="./img/remove.svg" alt="Icone remove">
+          </li>
+        </ul>
+      </aside>
+    </section>
+  </main>
 </body>
 
 </html>
