--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <header>
           <p>
             Minhas solicitações <i>&bullet;</i>
-            <span>0 despesa</span>
+            <span>0 despesas</span>
           </p>
           <h2>
             <small>R$</small>0,00
@@ -67,7 +67,7 @@
           <li class="expense">
             <img src="./img/food.svg" alt="Icone de tipo da despesa">
 
-            <div>
+            <div class="expense-info">
               <strong>Almoço</strong>
               <span>Alimentação</span>
             </div>
@@ -75,7 +75,21 @@
             <span class="expense-amount"></span>
               <small>R$</small>1.420,57
 
-              <img src="./img/remove.svg" alt="Icone remove">
+              <img src="./img/remove.svg" alt="Icone remove" class="remove-icon">
+          </li>
+
+          <li class="expense">
+            <img src="./img/accommodation.svg" alt="Icone de tipo da despesa">
+
+            <div class="expense-info">
+              <strong>Hotel</strong>
+              <span>hospedagem</span>
+            </div>
+
+            <span class="expense-amount"></span>
+              <small>R$</small>1.200,00
+
+              <img src="./img/remove.svg" alt="Icone remove" class="remove-icon">
           </li>
         </ul>
       </aside>
